--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "downshift": "^6.0.15",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-select": "^3.2.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
