--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,15 @@
 {
-  "short_name": "pocket-waifu",
-  "name": "Strona do pocket-waifu",
+  "short_name": "Pocket Waifu",
+  "name": "Strona do Pocket Waifu",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "Pictures/pwlogo.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "type": "image/png"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#3f51b5",
-  "background_color": "#ffffff"
+  "theme_color": "#20232a",
+  "background_color": "#20232a"
 }
