--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Sygnator.github.io/waifu-site",
+  "homepage": "https://waifu.sanakan.pl",
   "name": "waifu-site",
   "version": "0.1.0",
   "private": true,
