--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://waifu.sanakan.pl",
+  "homepage": "http://waifu.sanakan.pl/waifu-site/",
   "name": "waifu-site",
   "version": "0.1.0",
   "private": true,
