--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "downshift": "^6.0.15",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-markdown": "^5.0.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
