--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "axios-cookiejar-support": "^1.0.1",
     "downshift": "^6.0.15",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
@@ -19,6 +20,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-select": "^3.2.0",
+    "tough-cookie": "^4.0.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
