--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
     "axios-cookiejar-support": "^1.0.1",
+    "crypto-js": "^4.0.0",
     "downshift": "^6.0.15",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
