--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@mui/icons-material": "^5.3.1",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
@@ -15,6 +18,7 @@
     "crypto-js": "^4.0.0",
     "downshift": "^6.0.15",
     "react": "^17.0.1",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.1",
     "react-markdown": "^5.0.3",
     "react-router": "^5.2.0",
