--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -37,3 +37,4 @@ jobs:
         npm run deploy -- -u "github-actions-bot <support+actions@github.com>"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        CI: false
